# FCC-CORE-v1.3.1-Fractal-Causal-Consensus-Protocol

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  NOTICE.md  README.md  SECURITY.md  pyproject.toml  zenodo.json
data/: README.md
docs/: constraints.md  healing_operator.md  measurement_box_counting.md  overview.md  specification.md
paper/: README.md  fcc_core_v1_3_1.tex  references.bib
reproducibility/: environment.yml  seeds.md
reviews/: BC5_critical_review_ru.md
scripts/: analyze_results.py  run_simulation.py
src/fcc_core/: __init__.py  measure_dimension.py  params.py  simulation.py  state.py
tests/: test_energy_conservation.py
