[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fcc-core"
version = "1.3.1"
description = "FCC-CORE v1.3.1 reference implementation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "matplotlib>=3.8"]

[tool.setuptools.packages.find]
where = ["src"]
